# Klyja

./: .dockerignore  .gitignore  ANALYSIS.md  Cargo.toml  Dockerfile  README.md  TESTING.md  diesel.toml  docker-compose.yml  run_tests.sh
.github/workflows/: main.yml
backend/: Cargo.toml  build.rs
backend/src/: auth.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs  services.rs
backend/tests/: auth_tests.rs  basic_test.rs  integration_tests.rs
backend/tests/common/: mod.rs  test_db.rs
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/css/: styles.css
frontend/glsl/: line_fragment.glsl  line_vertex.glsl
frontend/js/: api-client.js  app-state.js  main.js  three-viewer.js  wasm-manager.js
frontend/tests/: alpine.test.js  api-client.test.js  app-state.test.js  main-integration.test.js  main.test.js  rendering.test.js  setup.js  tree-viewer.test.js  utils.js  wasm-manager.test.js
frontend/tests/mocks/: geco-mock.js
geco/: Cargo.toml  build.rs
geco/src/: lib.rs  lib_test.rs
geco/tests/: basic_test.rs  wasm_tests.rs
migrations/2025-05-03-132433_create_initial_tables/: down.sql  up.sql
migrations/2025-06-15-205417_add_user_auth/: down.sql  up.sql
protobuf/: AnimationData.proto
