# klyja/backend/Cargo.toml
[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1" # Logging framework
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Logging setup
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database dependencies (add features as needed)
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] } # ORM, connection pooling, date/time types
diesel_migrations = { version = "2.1", features = ["postgres"] } # Embedded migrations
dotenvy = "0.15"            # For loading .env file
chrono = { version = "0.4", features = ["serde"] } # Date/time handling

prost = "0.12"
bytes = "1"
#tower = "0.5.2"

utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
schemars = "0.8"

r2d2 = "0.8"

axum-extra = { version = "0.9", features = ["cookie"] }
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] } # For making requests to OAuth provider
rand = { version = "0.8", features = ["getrandom"] }
thiserror = "1.0" # For cleaner error handling

[dev-dependencies]
tokio-test = "0.4"          # Utilities for testing async code
axum-test = "14.0"          # Testing utilities for Axum
mockall = "0.12"            # For creating mock objects
diesel-async = { version = "0.4", features = ["postgres"] } # For testing with async DB operations
assert_matches = "1.5"      # More ergonomic assertions
uuid = { version = "1.6", features = ["v4", "serde"] } # For generating test IDs
rand = "0.8"                # For generating random test data
rstest = "0.18"             # Parameterized tests
serial_test = "3.0"
tempfile = "3.13"
tower = { version = "0.4", features = ["full"] }

[build-dependencies]
prost-build = "0.12"
