# klyja/geco/Cargo.toml
[package]
name = "geco"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"] # Needed for WASM library

[dependencies]
wasm-bindgen = "0.2" # Core library for JS <-> Rust communication
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
nalgebra = "0.33"

# Optional: Add logging to the browser console from Rust/WASM
# console_error_panic_hook = { version = "0.1", optional = true }
# web-sys = { version = "0.3", features = ['console'], optional = true }

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
wasm-bindgen-test = "0.3"  # For testing WASM code
js-sys = "0.3"             # JavaScript interop utilities for testing
assert_matches = "1.5"     # For more readable assertions
backend = { path = "../backend", version = "0.1.0" }
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.wasm-pack.profile.dev]
# For `wasm-pack build` or `wasm-pack build --dev`
# The "-O" flag is for optimization. wasm-opt uses it by default for dev profile.
# Add "--enable-bulk-memory" to it.
wasm-opt = ["-O", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-bulk-memory"]

[package.metadata.wasm-pack.profile.release]
# For `wasm-pack build --release`
# Also add "--enable-bulk-memory" here.
wasm-opt = ["-O", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-bulk-memory"]
